# Pokedex-In-PySide6-QML

./: .gitignore  pyproject.toml
pokedex/: bridge.py  pokedex_application.py  settings.py
pokedex/screen/: pokedex.qml
